--- a/views/memes.ejs
+++ b/views/memes.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Portfolio</title>
+  <title>Memes</title>
   <!-- BM Chaneg the path to the css files -->
   <link rel="stylesheet" href="../../css/bootstrap.min.css" />
   <link href="../../stylesheets/navbar.css" rel="stylesheet">
@@ -27,18 +27,18 @@
           <tr>
             
             <th scope="row" id= "memes">
-             <!-- ID from json object <%- 2+2 %> -->
+             
             </th>
-            <td>
+            <td id="size">
               <!-- Size from json Object -->
               
             </td>
-            <td>
+            <td id="image">
               Image
             </td>
-            <td>
-              Options
-            </td>
+            <td id="options">
+              
+            </tdid?>
           </tr>
         </tbody>
       </table>
