--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -14,8 +14,11 @@
                     <a class="nav-link" href="/memes">Memes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/login">Sign in</a>
+                    <a class="nav-link" href="/login">Log in</a>
                 </li>
+                <!-- <li class="nav-item">
+                    <a class="nav-link" href="/logout">Log out</a>
+                </li> -->
             </ul>
         </div>
     </div>
