--- a/views/memes.ejs
+++ b/views/memes.ejs
@@ -11,38 +11,9 @@
 
 <body class="position-relative" data-bs-spy="scroll">
   <%- include('./partials/navbar.ejs') %>
+  <%- include('./partials/memes.ejs') %>
   
-    <section class="container">
-      <table class="table" id="table">
-        <thead>
-          <tr>
-            <th scope="col">ID</th>
-            <th scope="col">Size</th>
-            <th scope="col">Image</th>
-            <th scope="col">Options</th>
-          </tr>
-        </thead>
-        <tbody>
-
-          <tr>
-            
-            <th scope="row" id= "memes">
-             
-            </th>
-            <td id="size">
-              <!-- Size from json Object -->
-              
-            </td>
-            <td id="image">
-              Image
-            </td>
-            <td id="options">
-              
-            </tdid?>
-          </tr>
-        </tbody>
-      </table>
-    </section>
+ 
     
     <%- include('./partials/scripts.ejs') %>
 </body>
