--- a/views/partials/login.ejs
+++ b/views/partials/login.ejs
@@ -1,7 +1,7 @@
 <section class="login" id="login">
     <div class="p-5 text-center">
         <% if (!user) { %>
-            <h1>Sign in</h1>
+            <h1>Sign in This is /partials/login.ejs</h1>
             <form action="/login/password" method="post">
                 <div class="row">
                     <label for="username">Username</label>
