--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -16,9 +16,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/login">Log in</a>
                 </li>
-                <!-- <li class="nav-item">
+                <li class="nav-item">
                     <a class="nav-link" href="/logout">Log out</a>
-                </li> -->
+                </li>
             </ul>
         </div>
     </div>
