reorganised auth.js & login.js

--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -19,7 +19,7 @@
 </head>
 
 <body class="position-relative" data-bs-spy="scroll">
-  <%- include('./partials/navbar.ejs') %>
+  <%- include('./partials/navbarAuth.ejs') %>
   <section>
     
 
