--- a/views/partials/memes.ejs
+++ b/views/partials/memes.ejs
@@ -1,4 +1,5 @@
 <link href="../../stylesheets/style.css" rel="stylesheet" />
+<link href="../../stylesheets/navbar.css" rel="stylesheet" />
 <section>
   <%- include('../partials/head.ejs') %>
 
@@ -28,8 +29,9 @@
         <td id="image">
 
            <img src= "<%= locals.memesList.memes[i].url %>" width="<%=locals.memesList.memes[i].width * 0.2%>" height="<%locals.memesList.memes[i].height * 0.2%>"/>
-           
+           <form action="/meme" method="post"></form>
            <button type="button" name= "details" type="submit" >Details</button>
+           </form>
         </td>
         <td id="options">
           <%= locals.memesList.memes[i].name %>
