commented out unneeded console.log

--- a/views/meme.ejs
+++ b/views/meme.ejs
@@ -12,8 +12,34 @@
   <%- include('./partials/navbar.ejs') %>
     <section class="container">
 
+      <table class="table" id="table">
+        <thead>
+          <tr>
+            <th scope="col">ID</th>
+            <th scope="col">URL</th>
+            <th scope="col">Image</th>
+            <th scope="col">Name</th>
+            <th scope="col">Dimensions</th>
+          </tr>
+        </thead>
+        <tbody>
 
-      </div>
+          <tr>
+            <th scope="row">
+              ID inserted here
+            </th>
+            <td>
+            </td>
+            <td>
+            </td>
+            <td>
+            </td>
+             <td>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    
 
 
     </section>
