Auth work in progress

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,7 +25,7 @@
               <div class="content-box text-center text-light">
                 <h1>Log in to Meme Central</h1>
                 <!-- Sign in form added here -->
-                            <form action="/login/password" method="post">
+                            <form action="/login" method="post">
                                 <section>
                                     <label for="username">Username</label>
                                     <input id="username" name="username" type="text" autocomplete="username" required autofocus>
