--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -27,6 +27,7 @@
           <a class="nav-link" href="/memes">Memes</a>
         </li>
         <li class="nav-item">
+          USER <%= JSON.stringify(locals) %>
           <a class="nav-link" href="/login">Log in</a>
         </li>
       </ul>
