--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,7 +11,7 @@ a {
   background-color: #00B7FF;
 }
 
-button {
+.details-button {
   background-color: white; 
   border: solid;
   color: black;
