--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -3,7 +3,10 @@
   class="navbar navbar-expand-lg navbar-light bg-light position-fixed w-100 fixed-top"
 >
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Meme Central</a>
+    <a class="navbar-brand" href="/">
+      <img src="/images/logo.png" width="50" height="30" alt="Meme Central"
+    /></a>
+
     <button
       class="navbar-toggler"
       type="button"
@@ -27,8 +30,12 @@
           <a class="nav-link" href="/memes">Memes</a>
         </li>
         <li class="nav-item">
-          USER <%= JSON.stringify(locals) %>
           <a class="nav-link" href="/login">Log in</a>
+        </li>
+        <li class="nav-item">
+          <form action="/logout" method="post">
+            <button class="logout" type="submit">Sign out</button>
+          </form>
         </li>
       </ul>
     </div>
