--- a/views/partials/memes.ejs
+++ b/views/partials/memes.ejs
@@ -12,7 +12,7 @@
         <th scope="col">Options</th>
       </tr>
      
-    </thead>
+    </thead>No 
     <tbody>   
 <% for(i=0; i<locals.memesList.memes.length; i++) {
   const meme = locals.memesList.memes[i] %>
